修改markdown的配置

--- a/gradle/extra/pack.gradle
+++ b/gradle/extra/pack.gradle
@@ -60,7 +60,7 @@ def pomConfig = {
     }
     licenses {
         license {
-            name "MIT License"
+            name "The MIT License (MIT)"
             url "https://opensource.org/licenses/mit-license.php"
             distribution "repo"
         }
