--- a/gradle/subprojects/orderhelper-spring-boot-starter.gradle
+++ b/gradle/subprojects/orderhelper-spring-boot-starter.gradle
@@ -2,6 +2,6 @@ def springBootGroup = "org.springframework.boot"
 
 dependencies {
     compile "${springBootGroup}:spring-boot-starter:${springBootVersion}"
-    compile "tk.mybatis:orderhelper-spring-boot-autoconfigure:1.0"
+    compile "${project.group}:orderhelper-spring-boot-autoconfigure:1.0"
     compile "tk.mybatis:orderby-helper:${orderVersion}"
 }
